# sales-analytics-rag

./: .env.example  .gitignore  NOTES.md  README.md  TODO.md  aggregates.py  dataset.py  main.py  metadata.py  mypy.ini  nl_formatters.py  nl_templates.py  pyproject.toml  requirements.txt  ruff.toml
src/: aggregates.py  cli.py  config.py  dataset.py  document.py  factories.py  kaggle_utils.py  llm.py  main.py  metadata.py  register.py  registry.py  utils.py  vectorstore.py
src/prompts/: data_enricher.txt  followup_answer.txt  retrieval_strategy.txt
tests/: conftest.py  rag_correctness.txt
tests/evals/: test_eval_followup.py  test_eval_rag_enricher.py
tests/units/: test_aggregates.py
