[project]
name = "sales-analytics-rag"
version = "0.1.0"
description = "RAG system for analyzing sales data using vector search and LLMs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.5",
    "kagglehub>=1.0.0",
    "langchain-chroma>=0.2.2",
    "langchain-core>=0.3.0",
    "pandas>=3.0.1",
    "pandas-stubs>=3.0.0.260204",
    "ruff>=0.15.6",
    "ty>=0.0.24",
]
