[project]
name = "sales-analytics-rag"
version = "0.1.0"
description = "RAG system for analyzing sales data using vector search and LLMs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.5",
    "kagglehub>=1.0.0",
    "langchain>=0.3.0",
    "langchain-chroma>=0.2.2",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "pandas>=3.0.1",
    "pandas-stubs>=3.0.0.260204",
    "rich>=14.0.0",
    "ruff>=0.15.6",
    "typer>=0.16.0",
    "ty>=0.0.24",
    "openai>=2.30.0",
    "langsmith>=0.7.22",
    "langchain-community>=0.4.1",
    "pydantic>=2.0.0",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "deepeval>=3.9.7",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
